Added views and controllers for Address, Company and JobOffer, fixes needed

--- a/GetHired/GetHired.ASPClient/Views/Shared/_Layout.cshtml
+++ b/GetHired/GetHired.ASPClient/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("GetHired", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -24,6 +24,8 @@
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Address", "Create", "Address")</li>
+                    <li>@Html.ActionLink("JobOffers", "Create", "Address")</li>
+                    <li>@Html.ActionLink("Companies", "Create", "Address")</li>
                 </ul>
             </div>
         </div>
