--- a/GetHired/GetHired.ASPClient/Views/Address/Create.cshtml
+++ b/GetHired/GetHired.ASPClient/Views/Address/Create.cshtml
@@ -1,6 +1,6 @@
 ﻿@using GetHired.DTO
 
-@model GetHired.DTO.AddressModel
+@model GetHired.DTO.AddressWithCityDetailsModel
 
 @{
     ViewBag.Title = "Create new Address";
@@ -8,67 +8,48 @@
 
 <h2>@ViewBag.Title</h2>
 
-@*<form>
-        <div class="form-group">
-            <label for="exampleFormControlInput1">Street Name</label>
-            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Street Name">
-        </div>
-        <div class="form-group">
-            <label for="exampleFormControlInput1">Postal Code</label>
-            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Postal Code">
-        </div>
-        <div class="form-group">
-            <label for="exampleFormControlSelect1">City</label>
-            <select class="form-control" id="exampleFormControlSelect1">
-                <option>some name here</option>
-                <option>2</option>
-                <option>3</option>
-                <option>4</option>
-                <option>5</option>
-            </select>
-        </div>
-
-    </form>*@
-
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
-    <div class="form-horizontal">
-        <h4>Movie</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.StreetName, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.StreetName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.StreetName, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.PostalCode, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.PostalCode, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.PostalCode, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.CityName,  htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("CityId", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.CityId, "", new { @class = "text-danger" })
-            </div>
-
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
+<div class="form-horizontal">
+    <h4>Movie</h4>
+    <hr />
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    <div class="form-group">
+        @Html.LabelFor(model => model.StreetName, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.StreetName, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => Model.StreetName, "", new { @class = "text-danger" })
         </div>
     </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.PostalCode, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.PostalCode, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => Model.PostalCode, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.CityName, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.DropDownListFor(x => x.CityId, new SelectList(@ViewBag.Cities, "CityId", "Name"), htmlAttributes: new { @class = "form-control" })
+        </div>
+
+    </div>
+
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" value="Create" class="btn btn-default" />
+        </div>
+    </div>
+    @if (ViewBag.Invalid != null)
+    {
+        <p class="text-danger">@ViewBag.Invalid</p>
+    }
+</div>
 }
 
 <div>
