Services, Repositories and DTOs modified

--- a/GetHired/GetHired.ASPClient/Views/Address/Create.cshtml
+++ b/GetHired/GetHired.ASPClient/Views/Address/Create.cshtml
@@ -1,6 +1,6 @@
 ﻿@using GetHired.DTO
 
-@model GetHired.DTO.AddressWithCityDetailsModel
+@model GetHired.DTO.ViewModels.AddressWithCityViewModel
 
 @{
     ViewBag.Title = "Create new Address";
