--- a/GetHired/GetHired.ASPClient/Views/JobOffer/Index.cshtml
+++ b/GetHired/GetHired.ASPClient/Views/JobOffer/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<GetHired.DTO.JobOfferWithCompanyDetailsModel>
+﻿@model IEnumerable<GetHired.DTO.ViewModels.JobOfferWithCompanyViewModel>
 
 @{
     ViewBag.Title = "Index";
