--- a/GetHired/GetHired.ASPClient/Views/Address/Index.cshtml
+++ b/GetHired/GetHired.ASPClient/Views/Address/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<GetHired.DTO.AddressWithCityDetailsModel>
+﻿@model IEnumerable<GetHired.DTO.AddressModel>
 
 @{
     ViewBag.Title = "Index";
@@ -17,12 +17,6 @@
         <th>
             @Html.DisplayNameFor(model => model.PostalCode)
         </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CityName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Country)
-        </th>
         <th></th>
     </tr>
 
@@ -33,12 +27,6 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.PostalCode)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CityName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Country)
             </td>
             <td>
                 @*@Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
