--- a/GetHired/GetHired.ASPClient/Views/Address/Create.cshtml
+++ b/GetHired/GetHired.ASPClient/Views/Address/Create.cshtml
@@ -1,6 +1,6 @@
 ﻿@using GetHired.DTO
 
-@model GetHired.DTO.ViewModels.AddressWithCityViewModel
+@model GetHired.DTO.AddressModel
 
 @{
     ViewBag.Title = "Create new Address";
@@ -33,7 +33,7 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.CityName, htmlAttributes: new { @class = "control-label col-md-2" })
+        @*@Html.LabelFor(model => model.CityName, htmlAttributes: new { @class = "control-label col-md-2" })*@
         <div class="col-md-10">
             @Html.DropDownListFor(x => x.CityId, new SelectList(@ViewBag.Cities, "CityId", "Name"), htmlAttributes: new { @class = "form-control" })
         </div>
