--- a/GetHired/GetHired.ASPClient/Views/Shared/_Layout.cshtml
+++ b/GetHired/GetHired.ASPClient/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Address", "Create", "Address")</li>
                     <li>@Html.ActionLink("JobOffers", "Create", "Address")</li>
-                    <li>@Html.ActionLink("Companies", "Create", "Address")</li>
+                    <li>@Html.ActionLink("Companies", "Index", "Company")</li>
                 </ul>
             </div>
         </div>
