Changed Create, Index, _Layout

--- a/GetHired/GetHired.ASPClient/Views/Address/Index.cshtml
+++ b/GetHired/GetHired.ASPClient/Views/Address/Index.cshtml
@@ -4,36 +4,33 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
-
+<br />
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Create New", "Create", null, new { @class = "btn btn-success btn-lg" })
 </p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.StreetName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.PostalCode)
-        </th>
-        <th></th>
-    </tr>
+<div class="row">
+    @foreach (var item in Model)
+    {
 
-    @foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.StreetName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PostalCode)
-            </td>
-            <td>
-                @*@Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-                @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-                @Html.ActionLink("Delete", "Delete", new { id=item.Id })*@
-            </td>
-        </tr>
+        <div class="form-inline">
+            <div class="col-sm-6 col-md-4">
+                <div class="thumbnail">
+                    <div class="caption">
+                        <p class="h3 text-center">Address</p>
+                        <p>
+                            <ul class="list-unstyled">
+                                <li>@Html.LabelFor(x => item.StreetName): @item.StreetName</li>
+                                <li>@Html.LabelFor(x => item.PostalCode): @item.PostalCode</li>
+                            </ul>
+                        </p>
+                        <p class="text-right">
+                            <a href="#" class="btn btn-primary" role="button">Edit</a>
+                            <a href="#" class="btn btn-danger" role="button">Delete</a>
+                            <a href="#" class="btn btn-info" role="button">Details</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
     }
-
-</table>
+</div>
