--- a/GetHired/GetHired.ASPClient/Views/Address/Create.cshtml
+++ b/GetHired/GetHired.ASPClient/Views/Address/Create.cshtml
@@ -3,8 +3,10 @@
 @model GetHired.DTO.AddressModel
 
 @{
-    ViewBag.Title = "Create new Address";
+    ViewBag.Title = "Create Address";
 }
+
+
 
 <h2>@ViewBag.Title</h2>
 
@@ -12,44 +14,43 @@
 {
     @Html.AntiForgeryToken()
 
-<div class="form-horizontal">
-    <h4>Movie</h4>
-    <hr />
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(model => model.StreetName, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.StreetName, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => Model.StreetName, "", new { @class = "text-danger" })
-        </div>
-    </div>
+    <div class="form-horizontal">
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.PostalCode, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.PostalCode, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => Model.PostalCode, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        @*@Html.LabelFor(model => model.CityName, htmlAttributes: new { @class = "control-label col-md-2" })*@
-        <div class="col-md-10">
-            @Html.DropDownListFor(x => x.CityId, new SelectList(@ViewBag.Cities, "CityId", "Name"), htmlAttributes: new { @class = "form-control" })
+        @Html.ValidationSummary(true, "", new {@class = "text-danger"})
+        <div class="form-group">
+            @Html.LabelFor(model => model.StreetName, htmlAttributes: new {@class = "control-label col-md-2"})
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.StreetName, new {htmlAttributes = new {@class = "form-control"}})
+                @Html.ValidationMessageFor(model => Model.StreetName, "", new {@class = "text-danger"})
+            </div>
         </div>
 
-    </div>
-
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Create" class="btn btn-default" />
+        <div class="form-group">
+            @Html.LabelFor(model => model.PostalCode, htmlAttributes: new {@class = "control-label col-md-2"})
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.PostalCode, new {htmlAttributes = new {@class = "form-control"}})
+                @Html.ValidationMessageFor(model => Model.PostalCode, "", new {@class = "text-danger"})
+            </div>
         </div>
+
+        <div class="form-group">
+            @Html.Label("City", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownListFor(x => x.CityId, new SelectList(@ViewBag.Cities, "CityId", "Name"), htmlAttributes: new {@class = "form-control"})
+            </div>
+
+        </div>
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Create" class="btn btn-default"/>
+            </div>
+        </div>
+        @if (ViewBag.Invalid != null)
+        {
+            <p class="text-danger">@ViewBag.Invalid</p>
+        }
     </div>
-    @if (ViewBag.Invalid != null)
-    {
-        <p class="text-danger">@ViewBag.Invalid</p>
-    }
-</div>
 }
 
 <div>
