--- a/GetHired/GetHired.ASPClient/Views/Company/Index.cshtml
+++ b/GetHired/GetHired.ASPClient/Views/Company/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@model System.Collections.Generic.IEnumerable<GetHired.DTO.CompanyModel>
 
+<body class="container">
 <h2>Index</h2>
 
 <p>
@@ -39,3 +40,4 @@
     }
 
 </table>
+</body>
