--- a/GetHired/GetHired.ASPClient/Views/Company/Index.cshtml
+++ b/GetHired/GetHired.ASPClient/Views/Company/Index.cshtml
@@ -1,10 +1,9 @@
 ﻿@model System.Collections.Generic.IEnumerable<GetHired.DTO.CompanyModel>
 
 <body class="container">
-<h2>Index</h2>
-
+<h2>Companies</h2>
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Create New", "Create", null, new {@class = "btn btn-success btn-lg"})
 </p>
 <table class="table">
     <tr>
@@ -32,9 +31,9 @@
                 @Html.DisplayFor(modelItem => item.Website)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.CompanyId }) |
-                @Html.ActionLink("Details", "Details", new { id = item.CompanyId }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.CompanyId })
+                @Html.ActionLink("Edit", "Edit", new {id = item.CompanyId}) |
+                @Html.ActionLink("Details", "Details", new {id = item.CompanyId}) |
+                @Html.ActionLink("Delete", "Delete", new {id = item.CompanyId})
             </td>
         </tr>
     }
