CompanyController implemented. New migration added. DTO data anotations added.

--- a/GetHired/GetHired.ASPClient/Views/Company/Details.cshtml
+++ b/GetHired/GetHired.ASPClient/Views/Company/Details.cshtml
@@ -3,7 +3,7 @@
 <h2>Details</h2>
 
 <div>
-    <h4>Movie</h4>
+    <h4>Company</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -31,11 +31,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Website)
+            @Html.DisplayNameFor(model => model.BusinessInfo)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Website)
+            @Html.DisplayFor(model => model.BusinessInfo)
         </dd>
 
     </dl>
