company views changed

--- a/GetHired/GetHired.ASPClient/Views/Shared/_Layout.cshtml
+++ b/GetHired/GetHired.ASPClient/Views/Shared/_Layout.cshtml
@@ -32,7 +32,9 @@
         </div>
     </div>
     <div class="body-content">
-        @RenderBody()
+        <div class="container">
+            @RenderBody()
+        </div>
         <hr />
         <footer>
             <p>&copy; @DateTime.Now.Year - GetHired</p>
