--- a/GetHired/GetHired.ASPClient/Views/Company/Delete.cshtml
+++ b/GetHired/GetHired.ASPClient/Views/Company/Delete.cshtml
@@ -1,9 +1,5 @@
 ﻿@model GetHired.DTO.CompanyModel
 
-@{
-    Layout = null;
-}
-
 <h2>Delete</h2>
 
 <h3>Are you sure you want to delete this?</h3>
@@ -40,7 +36,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.b)
+            @Html.DisplayFor(model => model.BusinessInfo)
         </dd>
 
     </dl>
