--- a/GetHired/GetHired.ASPClient/Views/Address/Index.cshtml
+++ b/GetHired/GetHired.ASPClient/Views/Address/Index.cshtml
@@ -1,37 +1,36 @@
 ﻿@model IEnumerable<GetHired.DTO.AddressModel>
 
-@{
-    ViewBag.Title = "Index";
-}
-<body class="container">
-    <br />
-    <p>
-        @Html.ActionLink("Create New", "Create", null, new { @class = "btn btn-success btn-lg" })
-    </p>
-    <div class="row">
-        @foreach (var item in Model)
-        {
 
-            <div class="form-inline">
-                <div class="col-sm-6 col-md-4">
-                    <div class="thumbnail">
-                        <div class="caption">
-                            <p class="h3 text-center">Address</p>
-                            <p>
-                                <ul class="list-unstyled">
-                                    <li>@Html.LabelFor(x => item.StreetName): @item.StreetName</li>
-                                    <li>@Html.LabelFor(x => item.PostalCode): @item.PostalCode</li>
-                                </ul>
-                            </p>
-                            <p class="text-right">
-                                <a href="#" class="btn btn-primary" role="button">Edit</a>
-                                <a href="#" class="btn btn-danger" role="button">Delete</a>
-                                <a href="#" class="btn btn-info" role="button">Details</a>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        }
-    </div>
-</body> 
+<h2>Index</h2>
+
+<p>
+    @Html.ActionLink("Create New", "Create", new {id=ViewBag.CompanyId}, new { @class = "btn btn-success btn-lg" })
+</p>
+<table class="table">
+    <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.StreetName)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.PostalCode)
+        </th>
+    </tr>
+
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.PostalCode)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.StreetName)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit") |
+                @Html.ActionLink("Details", "Details") |
+                @Html.ActionLink("Delete", "Delete")
+            </td>
+        </tr>
+    }
+
+</table>
