--- a/GetHired/GetHired.ASPClient/Views/Company/Delete.cshtml
+++ b/GetHired/GetHired.ASPClient/Views/Company/Delete.cshtml
@@ -4,7 +4,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Movie</h4>
+    <h4>Company</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -46,7 +46,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Delete" class="btn btn-default" />
+                <input type="submit" value="Delete" class="btn btn-default"/>
                 @Html.ActionLink("Back to List", "Index")
             </div>
         </div>
