--- a/GetHired/GetHired.ASPClient/Views/Company/Details.cshtml
+++ b/GetHired/GetHired.ASPClient/Views/Company/Details.cshtml
@@ -3,13 +3,13 @@
 <body class="container">
     <h2>Details</h2>
 
-<div>
-    <h4>Company</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
+    <div>
+        <h4>Company</h4>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.Name)
+            </dt>
 
             <dd>
                 @Html.DisplayFor(model => model.Name)
@@ -31,13 +31,21 @@
                 @Html.DisplayFor(model => model.PhoneNumber)
             </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.BusinessInfo)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.BusinessInfo)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.BusinessInfo)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.BusinessInfo)
+            </dd>
+            
+            <dt>
+                Locations
+            </dt>
+
+            <dd>
+                @Html.ActionLink("Find company's offices locations", "Index", "Address", new { id = Model.CompanyId }, null)
+            </dd>
 
         </dl>
     </div>
