--- a/GetHired/GetHired.ASPClient/Views/Shared/_Layout.cshtml
+++ b/GetHired/GetHired.ASPClient/Views/Shared/_Layout.cshtml
@@ -20,14 +20,12 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Address", "Create", "Address")</li>
-                    <li>@Html.ActionLink("JobOffers", "Create", "Address")</li>
+                    <li>@Html.ActionLink("Address", "Index", "Address")</li>
                     <li>@Html.ActionLink("Companies", "Index", "Company")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
             </div>
-
         </div>
     </div>
     <div class="body-content">
