AddressController CreateAddressByCompanyId fixed

--- a/GetHired/GetHired.ASPClient/Views/Address/Index.cshtml
+++ b/GetHired/GetHired.ASPClient/Views/Address/Index.cshtml
@@ -4,7 +4,7 @@
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create", new {id=ViewBag.CompanyId}, new { @class = "btn btn-success btn-lg" })
+    @Html.ActionLink("Add new address to company", "Create", new {id=ViewBag.CompanyId})
 </p>
 <table class="table">
     <tr>
