--- a/GetHired/GetHired.ASPClient/Views/Address/Create.cshtml
+++ b/GetHired/GetHired.ASPClient/Views/Address/Create.cshtml
@@ -6,8 +6,9 @@
 {
     @Html.AntiForgeryToken()
 
-    <div class="form-horizontal">
+    @Html.Hidden( "CompanyId" )
 
+    <div class="form-horizontal">
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
             @Html.LabelFor(model => model.StreetName, htmlAttributes: new { @class = "control-label col-md-2" })
