--- a/GetHired/GetHired.ASPClient/Views/JobOffer/Index.cshtml
+++ b/GetHired/GetHired.ASPClient/Views/JobOffer/Index.cshtml
@@ -1,66 +1,59 @@
-﻿@model IEnumerable<GetHired.DTO.ViewModels.JobOfferWithCompanyViewModel>
+﻿@model System.Collections.Generic.IEnumerable<GetHired.DTO.JobOfferModel>
 
-@{  
-    ViewBag.Title = "Index";
-}
+<h2>Index</h2>
 
-<body class="container">
-    <h2>Index</h2>
+<p>
+    @Html.ActionLink("Create New", "Create", null, new { @class = "btn btn-success btn-lg" })
+</p>
+<table class="table">
+    <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.Position)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Payment)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Description)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.JobCategory)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.JobType)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.JobOfferRating)
+        </th>
+    </tr>
 
-    <p>
-        @*@Html.ActionLink("Create New", "Create")*@
-    </p>
-    <table class="table">
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.CompanyName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Description)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Position)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Payment)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.JobCategory)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.JobType)
-            </th>
-            <th></th>
-        </tr>
+    @foreach (var item in Model)
+    {
+    <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.Position)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Payment)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Description)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.JobCategory)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.JobType)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.JobOfferRating)
+        </td>
+        <td>
+            @Html.ActionLink("Edit", "Edit", new { id = item.CompanyId }) |
+            @Html.ActionLink("Details", "Details", new { id = item.CompanyId }) |
+            @Html.ActionLink("Delete", "Delete", new { id = item.CompanyId })
+        </td>
+    </tr>
+    }
 
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.CompanyName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Description)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Position)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Payment)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.JobCategory)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.JobType)
-                </td>
-                <td>
-                    @*@Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-                        @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-                        @Html.ActionLink("Delete", "Delete", new { id=item.Id })*@
-                </td>
-            </tr>
-        }
-
-    </table>
-</body>
+</table>
