--- a/GetHired/GetHired.ASPClient/Views/Shared/_Layout.cshtml
+++ b/GetHired/GetHired.ASPClient/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Address", "Index", "Address")</li>
+                    <li>@Html.ActionLink("JobOffers", "Index", "JobOffer")</li>
                     <li>@Html.ActionLink("Companies", "Index", "Company")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
