Added Index view for JobOffers

--- a/GetHired/GetHired.ASPClient/Views/Company/Details.cshtml
+++ b/GetHired/GetHired.ASPClient/Views/Company/Details.cshtml
@@ -38,13 +38,17 @@
             <dd>
                 @Html.DisplayFor(model => model.BusinessInfo)
             </dd>
-            
+
             <dt>
                 Locations
             </dt>
 
             <dd>
                 @Html.ActionLink("Find company's offices locations", "Index", "Address", new { id = Model.CompanyId }, null)
+            </dd>
+
+            <dd>
+                @Html.ActionLink("Find company's job offers", "Index", "JobOffer", new { id = Model.CompanyId }, null)
             </dd>
 
         </dl>
