--- a/GetHired/GetHired.ASPClient/Views/JobOffer/Create.cshtml
+++ b/GetHired/GetHired.ASPClient/Views/JobOffer/Create.cshtml
@@ -66,7 +66,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index", new { id = Model.CompanyId })
+    @Html.ActionLink("Back to List", "Index")
 </div>
 
 @section Scripts {
