Implemented JobOffersWithCompany view and changed Details view for company

--- a/GetHired/GetHired.ASPClient/Views/Company/Details.cshtml
+++ b/GetHired/GetHired.ASPClient/Views/Company/Details.cshtml
@@ -46,9 +46,12 @@
             <dd>
                 @Html.ActionLink("Find company's offices locations", "Index", "Address", new { id = Model.CompanyId }, null)
             </dd>
+            <dt>
+                Job Offers
+            </dt>
 
             <dd>
-                @Html.ActionLink("Find company's job offers", "Index", "JobOffer", new { id = Model.CompanyId }, null)
+                @Html.ActionLink("Find company's job offers", "JobOffersWithCompany", "JobOffer", new { id = Model.CompanyId }, null)
             </dd>
 
         </dl>
