--- a/GetHired/GetHired.ASPClient/Views/Address/Index.cshtml
+++ b/GetHired/GetHired.ASPClient/Views/Address/Index.cshtml
@@ -26,9 +26,9 @@
                 @Html.DisplayFor(modelItem => item.StreetName)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit") |
-                @Html.ActionLink("Details", "Details") |
-                @Html.ActionLink("Delete", "Delete")
+                @Html.ActionLink("Edit", "Edit", new {id=item.AddressId}) |
+                @Html.ActionLink("Details", "Details", new { id = item.AddressId }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.AddressId })
             </td>
         </tr>
     }
