--- a/GetHired/GetHired.ASPClient/Views/JobOffer/Create.cshtml
+++ b/GetHired/GetHired.ASPClient/Views/JobOffer/Create.cshtml
@@ -26,14 +26,23 @@
                 @Html.ValidationMessageFor(model => Model.Description, "", new { @class = "text-danger" })
             </div>
         </div>
-
+        
         <div class="form-group">
-            @Html.Label("Job Category", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Payment, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EnumDropDownListFor(x => x.JobCategory, "Select Job Category", htmlAttributes: new { @class = "form-control" })
+                @Html.EditorFor(model => model.Payment, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => Model.Payment, "", new { @class = "text-danger" })
             </div>
         </div>
-
+        
+        <div class="form-group">
+            @Html.LabelFor(model => model.JobOfferRating, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.JobOfferRating, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => Model.JobOfferRating, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        
         <div class="form-group">
             @Html.Label("Job Type", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -42,10 +51,9 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Payment, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("Job Category", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Payment, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => Model.Payment, "", new { @class = "text-danger" })
+                @Html.EnumDropDownListFor(x => x.JobCategory, "Select Job Category", htmlAttributes: new { @class = "form-control" })
             </div>
         </div>
 
