Deleted unused views. Added GetHired.Utils with PDF Writer and JSON reader

--- a/GetHired/GetHired.ASPClient/Views/JobOffer/Index.cshtml
+++ b/GetHired/GetHired.ASPClient/Views/JobOffer/Index.cshtml
@@ -2,6 +2,10 @@
 
 <h2>Index</h2>
 
+<p>
+    @Html.ActionLink("Export PDF with job offers", "DownloadPDF")
+</p>
+
 <table class="table">
     <tr>
         <th>
