--- a/GetHired/GetHired.ASPClient/Views/JobOffer/Create.cshtml
+++ b/GetHired/GetHired.ASPClient/Views/JobOffer/Create.cshtml
@@ -74,7 +74,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Index", new {id=Model.CompanyId})
 </div>
 
 @section Scripts {
