--- a/GetHired/GetHired.ASPClient/Views/CompanyJobOffer/Details.cshtml
+++ b/GetHired/GetHired.ASPClient/Views/CompanyJobOffer/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model GetHired.DTO.ViewModels.JobOfferWithCompanyModel
+﻿@model GetHired.DTO.JobOfferWithCompanyModel
 
 <body class="container">
 <h2>Details</h2>
