New PDF Exporter working, Deleted unused views

--- a/GetHired/GetHired.ASPClient/Views/Address/Details.cshtml
+++ b/GetHired/GetHired.ASPClient/Views/Address/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model GetHired.DTO.ViewModels.AddressWithCityViewModel
+﻿@model GetHired.DTO.AddressWithCityModel
 
 <body class="container">
 <h2>Details</h2>
